[package]
name = "gns3"
version = "0.1.0"
authors = ["Tibor Schneider <tiborschneider@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.4"
