[package]
name = "problem_probability"
version = "0.1.0"
authors = ["Tibor Schneider <tiborschneider@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowcap = { path = "../snowcap", features = ["count-states"] }
clap = { git = "https://github.com/clap-rs/clap", branch = "master" }
statistical = "1.0.0"
rand = "0.7"
indicatif = "0.15.0"
console = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
num_cpus = "1.13"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
plotly = { version = "0.6.0", features = [] }
