[package]
name = "snowcap_runtime"
version = "0.1.0"
authors = ["Tibor Schneider <tiborschneider@bluewin.ch>"]
edition = "2018"

[lib]
name = "snowcap_runtime"
path = "src/lib.rs"

[dependencies]
gns3 = { path = "../gns3" }
snowcap = { path = "../snowcap" }
log = "0.4"
pretty_env_logger = "0.4"
telnet = "0.1.4"
regex = "1.4"
pcap = "0.7"
etherparse = "0.9.0"
maplit = "1"
clap = { git = "https://github.com/clap-rs/clap", branch = "master"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
